# imperium

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: AddThirdParty.cmake  CompileShaders.cmake
imp/: CMakeLists.txt
imp/audio/: CMakeLists.txt
imp/audio/include/audio/: audio.h  device.h  listener.h  mixer.h  source.h
imp/audio/src/: audio.cpp
imp/core/: CMakeLists.txt
imp/core/include/core/: core.h
imp/core/include/core/containers/: array.h  map.h  ring.h
imp/core/include/core/fs/: fs.h  vfs.cpp  vfs.h
imp/core/include/core/log/: console_sink.h  file_sink.h  log.cpp  log.h
imp/core/include/core/math/: mat3.h  mat4.h  math.h  quat.h  quaternion.h  scalar.h  vec2.h  vec3.h  vec4.h
imp/core/include/core/memory/: allocator.h  allocator_types.h  allocator_utils.h  heap_allocator.h  iallocator.h  int_types.h  linear_allocator.h  pool_allocator.h  stack_allocator.h
imp/core/include/core/platform/: exe_path.cpp  exe_path.h
imp/core/src/: core.cpp
imp/creature/: CMakeLists.txt
imp/creature/include/creature/: agent.h  behaviour.h  blackboard.h  creature.h  nav.h  perception.h
imp/creature/src/: creature.cpp
imp/fwk/: CMakeLists.txt
imp/fwk/include/fwk/: app.h  engine.h  entity.h  fwk.h  gfx_device.h  layer.h  scene.h  window.h
imp/fwk/src/: fwk.cpp  layer.cpp  window.cpp
imp/gfx/: CMakeLists.txt
imp/gfx/cmake/: CompileShaders.cmake
imp/gfx/include/gfx/: commands.h  device.h  gfx.h  pipeline.h  resources.h  swapchain.h  vk_device.h
imp/gfx/shaders/vulkan/: triangle.vert
imp/gfx/src/: gfx.cpp
imp/gfx/src/backend/dx11/: dx11_device.cpp  dx11_device.h
imp/gfx/src/backend/dx12/: dx12_device.cpp  dx12_device.h
imp/gfx/src/backend/vulkan/: vk_allocator.cpp  vk_allocator.h  vk_allocator_test.cpp  vk_buffer.cpp  vk_buffer.h  vk_command_list.cpp  vk_command_list.h  vk_commands.cpp  vk_commands.h  vk_config.h  vk_desc_alloc.cpp  vk_desc_alloc.h  vk_device.cpp  vk_device.h  vk_pipeline.cpp  vk_pipeline.h  vk_render_target.cpp  vk_render_target.h  vk_sampler.cpp  vk_sampler.h  vk_shader.cpp  vk_shader.h  vk_swapchain.cpp  vk_swapchain.h  vk_texture.cpp  vk_texture.h  vk_vertex.h  vk_vma_impl.cpp
imp/net/: CMakeLists.txt
imp/net/include/net/: address.h  net.h  packet.h  session.h  socket.h
imp/net/src/: net.cpp
imp/physics/: CMakeLists.txt
imp/physics/include/physics/: body.h  collider.h  material.h  physics.h  query.h  world.h
imp/physics/src/: physics.cpp
imp/script/: CMakeLists.txt
imp/script/include/script/: binding.h  component.h  script.h  vm.h
imp/script/src/: script.cpp
protocol/: CMakeLists.txt
protocol/include/protocol/: control.h  frame.h  memory_telemetry.h  message_type.h  spsc_queue.h  tcp_helpers.h  tcp_listener.h  tcp_socket.h  tool_server.h
protocol/schemas/: memory.fbs
protocol/src/: connection.cpp  control.cpp  frame.cpp  serialisation.cpp  tcp_listener.cpp  tcp_socket.cpp  tool_server.cpp
sandbox/: CMakeLists.txt
sandbox/shaders/vulkan/: cube.frag  cube.vert
sandbox/src/: main.cpp
tests/: CMakeLists.txt
tests/math/: CMakeLists.txt  math_test_helper.h  test_mat3.cpp  test_mat4.cpp  test_quaternion.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
tests/protocol/: CMakeLists.txt  test_tool_server.cpp
tools/: CMakeLists.txt
tools/console/: CMakeLists.txt
tools/console/src/: console.cpp
tools/memv/: CMakeLists.txt
tools/memv/include/memv/: memv_app.h
tools/memv/src/: memv.cpp  memv_app.cpp
tools/perlingen/: CMakeLists.txt
tools/perlingen/include/perlingen/: perlingen.h  stb_image_write.h
tools/perlingen/src/: main.cpp  perlingen.cpp
tools/profiler/: CMakeLists.txt
tools/profiler/src/: profiler.cpp
windows-debug/: CMakeCache.txt
